GET /badge returns associated Badgr data
